# CppUnitStudy

./: .gitignore  CMakeLists.txt  README.md  modifCpp.py
cmake/: cppunit.cmake
cppunit/include/cppunit/: AssertionRecorder.h  Protector.h  TestAssert.h  TestFixture.h
cppunit/src/cppunit/: AssertionRecorder.cpp  DefaultProtector.cpp  Protector.cpp
src/: CustomHook.cpp  CustomHook.h  CustomListener.h  main.cpp
src/TU/: test1.cpp  test1.h
